# transcription-live

./: .env  main copy.py  main.py  pyproject.toml  test_client.html
static/: index copy.html
